--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -23,7 +23,7 @@
   padding: 2px 10px 18px 12px;
 }
 
-.footer {
+.footer-mulheres {
   background: #F4F4F4;
   display: flex;
   align-items: center;
@@ -32,20 +32,24 @@
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
 }
-.footer-links {
+.footer-mulheres-links {
   display: flex;
   align-items: center;
 }
-.footer-links a {
+.footer-mulheres-links a {
   color: black;
   opacity: 0.15;
   text-decoration: none;
   font-size: 24px;
   padding: 0px 10px;
 }
-.footer-links a:hover {
+.footer-mulheres-links a:hover {
   opacity: 1;
 }
-.footer .fa-heart {
+.footer-mulheres .fa-heart {
   color: #D23333;
+}
+
+#footer {
+  visibility: hidden;
 }
