--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -3,11 +3,12 @@
 
 /* add a logo in the header */
 #header {
-    background: url(../images/Capa02.png) no-repeat 2px;
+    background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(../images/cabeçalho.png) no-repeat 2px;
     padding-left: 86px;
     color: #ffffff; /* Define a cor do texto no header para branco */
     background-size: cover;
     background-position: center;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
 
 /* move the project menu to the right */
@@ -28,7 +29,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 50px;
+  height: 84px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
 }
