--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -1,20 +1,29 @@
 /* load the default Redmine stylesheet */
 @import url(../../../stylesheets/application.css);
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap');
 
 /* add a logo in the header */
+
 #header {
-    background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(../images/cabeçalho.png) no-repeat 2px;
+    background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.1)), url(../images/Plano_de_Fundo02.png) no-repeat 2px;
     padding-left: 86px;
     color: #ffffff; /* Define a cor do texto no header para branco */
     background-size: cover;
     background-position: center;
-    text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
+    font-family: 'Montserrat', 'Verdana', sans-serif;
+}
+
+#header h1 {
+  font-family: 'Montserrat', 'Verdana', sans-serif;
+  font-weight: 700;
 }
 
 /* move the project menu to the right */
 #main-menu {
     left: auto;
     right: 0px;
+    font-family: 'Montserrat', 'Verdana', sans-serif;
 }
 
 #top-menu {
@@ -22,6 +31,11 @@
   font-family: 'Montserrat', 'Verdana', sans-serif;
   font-size: 9.6px;
   padding: 2px 10px 18px 12px;
+}
+
+h2, h3 {
+  font-family: 'Montserrat', 'Verdana', sans-serif;
+  font-weight: 500 !important;
 }
 
 .footer-mulheres {
@@ -32,6 +46,7 @@
   height: 84px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
+  width: 100%;
 }
 .footer-mulheres-links {
   display: flex;
@@ -53,4 +68,9 @@
 
 #footer {
   visibility: hidden;
+  display: none;
+}
+
+body {
+  min-height: 92vh;
 }
