--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -12,8 +12,8 @@
     background-position: center;
     text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
     font-family: 'Montserrat', 'Verdana', sans-serif;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 #header h1 {
