--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -35,6 +35,13 @@
   padding: 12px 18px 25px 12px;
 }
 
+#top-menu a {
+    color: #fff;
+    margin-right: 8px;
+    font-weight: bold;
+    font-size: 12px;
+}
+
 h2, h3 {
   font-family: 'Montserrat', 'Verdana', sans-serif;
   font-weight: 500 !important;
