--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -51,7 +51,7 @@
     border-radius: 3px;
 }
 
-project-jump .drdn-trigger {
+.drdn-trigger {
     width: 100%;
     height: 32px;
     display: inline-block;
