--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -2,6 +2,18 @@
 @import url(../../../stylesheets/application.css);
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap');
 
+
+
+
+#content {
+    flex-grow: 1;
+    background-color: #f1d7ff;
+    margin: 0px;
+    padding: 10px 16px 10px 16px;
+    overflow-x: auto;
+}
+
+
 /* add a logo in the header */
 
 #header {
