--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -7,7 +7,7 @@
 
 #content {
     flex-grow: 1;
-    background-color: #f3f0f3;
+    background-color: #ece6ed;
     margin: 0px;
     padding: 10px 16px 10px 16px;
     overflow-x: auto;
