--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -14,7 +14,7 @@
 }
 
 div.issue {
-    background: #efefef;
+    background: #dbb6ee;
     padding: 12px;
     margin-bottom: 10px;
     border: 1px solid #d7d7d7;
