--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -22,7 +22,7 @@
 }
 
 div.issue {
-    background: #DFCEE0;
+    background: #B9AFD2;
     padding: 12px;
     margin-bottom: 10px;
     border: 1px solid #d7d7d7;
