--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -17,12 +17,12 @@
     flex-shrink: 0;
     padding-left: 20px;
     padding-right: 8px;
-    background: #D1CFDD;
+    background: #C9BFE2;
     border-left: 1px solid #ddd;
 }
 
 div.issue {
-    background: #e8e6ed;
+    background: #C9BFE2;
     padding: 12px;
     margin-bottom: 10px;
     border: 1px solid #d7d7d7;
