--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -16,6 +16,12 @@
     font-size: 1.2rem;
 }
 
+.h2, h2 {
+    font-size: 26px;
+    font-variant-caps: small-caps;
+    font-weight: 700;
+}
+
  #sidebar {
     flex-shrink: 0;
     padding-left: 20px;
