--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -12,6 +12,17 @@
     overflow-x: auto;
 }
 
+#main-menu li a {
+    display: block;
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
+    margin: 0;
+    padding: 4px 10px 4px 10px;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+}
+
 .h4, h4 {
     font-size: 1.2rem;
 }
