--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -12,7 +12,7 @@
     overflow-x: auto;
 }
 
-div#activity h3 {
+#activity h3 {
     padding: 5px;
     font-size: 24px;
     font-variant-caps: small-caps;
