--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -12,6 +12,18 @@
     overflow-x: auto;
 }
 
+progress, .progress-stacked {
+    --bs-progress-height: 1rem;
+    --bs-progress-font-size: 0.75rem;
+    --bs-progress-bg: var(--bs-secondary-bg);
+    --bs-progress-border-radius: var(--bs-border-radius);
+    --bs-progress-box-shadow: var(--bs-box-shadow-inset);
+    --bs-progress-bar-color: #fff;
+    --bs-progress-bar-bg: #0d6efd;
+    --bs-progress-bar-transition: width 0.6s ease;
+}
+
+
 #activity h3 {
     padding: 5px;
    
