--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -125,7 +125,7 @@ h2, h3 {
 }
 
 .footer-mulheres {
-  background: #F4F4F4;
+  background: #4F0070;
   display: flex;
   align-items: center;
   justify-content: space-between;
