--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -125,6 +125,7 @@ h2, h3 {
 }
 
 .footer-mulheres {
+  background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.1)), url(../images/Marca_BRANCO.png) no-repeat 2px;
   background: #4F0070;
   display: flex;
   align-items: center;
