--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -2,6 +2,11 @@
 @import url(../../../stylesheets/application.css);
 
 
+.logoLelia {
+    background: url(../images/logoLelia.png);
+}
+
+
 
 
 #content {
