--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -4,9 +4,9 @@
 
 .logoLelia {
     background: url(../images/logoLelia.png) no-repeat;
-    background: cover;
-    width: 300px;
-    height: 100px;
+    background-size: cover;
+    width: 500px;
+    height: 150px;
 }
 
 
