--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -4,9 +4,13 @@
 
 .logoLelia {
     background: url(../images/logoLelia.png) no-repeat;
-    background-size: cover;
+    /* background-size: cover; */
     width: 500px;
     height: 150px;
+    position: absolute;
+    margin-top: -35px;
+    background-size: 350px;
+    margin-left: -55px;
 }
 
 
