--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -14,6 +14,13 @@
     
 }
 
+.nodata, .warning {
+    text-align: center;
+    background-color: #C9BFE2;
+    border-color: #4F0070;
+    color: #ffffff;
+}
+
 
 
 
