--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -19,7 +19,7 @@
     padding: 20px;
     width: 340px;
     border: 1px solid #4F0070;
-    background-color: #FFEBC1;
+    background-color: #C9BFE2;
     border-radius: 4px;
     box-sizing: border-box;
 }
